--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@
   * Write these styles 1st!
   */
 
-@import url('');
+@import url('https://use.fontawesome.com/releases/v5.5.0/css/all.css');
 
   body {
     display: flex;
